--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-matplotlib==3.8.0
-networkx==3.1
-numpy==1.27.4
-pandas==2.1.1
-scikit-learn==1.3.2
-seaborn==0.12.3
 streamlit==1.29.0
 xgboost==1.7.6
+scikit-learn==1.3.2
+pandas==2.1.1
+numpy==1.27.4
+matplotlib==3.8.0
+seaborn==0.12.3
+networkx==3.1
 joblib==1.3.2
+fastapi (for API)
